# RTSE

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark.json  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
benchmark/: test_bench.py  test_bench_ci.py
binding/: pybind.cpp
core/: rtree.cpp  rtree.h
docs/source/: api.rst  architecture.rst  basic_info.rst  conf.py  index.rst  performance.rst  problem.rst  users.rst
script/: plot.py  run_bench.sh  run_test.sh
tests/: conftest.py  test_box2.cpp  test_dummy.cpp  test_import.py  test_properties.py  test_rtree.cpp  test_rtree.py
